--- a/models/sources.yml
+++ b/models/sources.yml
@@ -4,7 +4,7 @@ sources:
   - name: DWHIBIS
     description: "Parquet files stored in S3"
     database: dbk_test_mart
-    schema: DWHIBIS1
+    schema: DWHIBIS
     tables:
       - name: IBIS_CALL
         description: "User data in parquet format"
@@ -51,7 +51,7 @@ sources:
   - name: DWHODS
     description: "Additional schema in S3"
     database: dbk_test_mart
-    schema: DWHODS1
+    schema: DWHODS
     tables:
       - name: CALENDAR
         description: "Description for CALENDAR"
